--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,22 @@ DATABASE_PORT=
 DATABASE_USER=
 DATABASE_PASSWORD=
 DATABASE_NAME=
+DATABASE_SSL=
 
 JWT_SECRET=
 JWT_EXPIRY_IN=
 
 REFRESH_JWT_SECRET=
 REFRESH_JWT_EXPIRY_IN=
+
+DEFAULT_EVENT_CONFIG_NAME=
+DEFAULT_EVENT_START_CHECK_IN_TIME_IN_SECONDS=
+DEFAULT_EVENT_LATE_COMING_START_TIME_IN_SECONDS=
+DEFAULT_EVENT_STOP_CHECK_IN_TIME_IN_SECONDS=
+DEFAULT_EVENT_LOCATION_LATITUDE=
+DEFAULT_EVENT_LOCATION_LONGITUDE=
+
+DEFAULT_ADMIN_FIRSTNAME=
+DEFAULT_ADMIN_LASTNAME=
+DEFAULT_ADMIN_EMAIL=
+DEFAULT_ADMIN_PHONE_NUMBER=
