--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^5.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "@types/nodemailer": "^6.4.17",
     "argon2": "^0.41.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "date-fns": "^4.1.0",
+    "moment": "^2.30.1",
     "nestjs-pino": "^4.3.0",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
