added notes feature, updated workers creation/update fields, minor modifications to dashboard and events

--- a/.env.example
+++ b/.env.example
@@ -19,11 +19,14 @@ REFRESH_JWT_SECRET=
 REFRESH_JWT_EXPIRY_IN=
 
 DEFAULT_EVENT_CONFIG_NAME=
+DEFAULT_EVENT_ALLOWED_DISTANCE_IN_METERS=
 DEFAULT_EVENT_START_CHECK_IN_TIME_IN_SECONDS=
 DEFAULT_EVENT_LATE_COMING_START_TIME_IN_SECONDS=
 DEFAULT_EVENT_STOP_CHECK_IN_TIME_IN_SECONDS=
 DEFAULT_EVENT_LOCATION_LATITUDE=
 DEFAULT_EVENT_LOCATION_LONGITUDE=
+
+ENFORCE_DISTANCE_CHECK=
 
 DEFAULT_ADMIN_FIRSTNAME=
 DEFAULT_ADMIN_LASTNAME=
