add logging and pooling to env

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,8 @@ DATABASE_USER=
 DATABASE_PASSWORD=
 DATABASE_NAME=
 DATABASE_SSL=
+DATABASE_LOGGING=
+DATABASE_POOL=
 
 JWT_SECRET=
 JWT_EXPIRY_IN=
