made minor adjustment to worker welcome email template

--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,8 @@ DEFAULT_ADMIN_EMAIL=
 DEFAULT_ADMIN_PHONE_NUMBER=
 
 CORS_ORIGINS=
+
+SUPPORT_FORM_URL=
+LOGIN_URL=
+EXPLAINER_VIDEO_ANDROID_URL=
+EXPLAINER_VIDEO_IOS_URL=
